src/components/ArticleLine/ArticleLine.sass
@import '../../_sass/_breakpoints.sass'
@import '../../_sass/_constants.sass'

.article-line
  width: 100%
  display: flex
  flex-wrap: wrap
  overflow-x: hidden

.line__line
  display: none

// ENTRIES CONTAINER ___________________________________________________________
.line__entries
  display: flex
  flex-direction: column
  width: 100%
  padding: 2.023rem 1.82rem 0 1.82rem

+for-tablet-portrait-up
  .line__entries
    align-items: center

+for-tablet-landscape-up
  .line__entries
    position: relative
    right: -12rem
    align-items: flex-end
    width: 99%
    padding: 0
    padding-top: 2.023rem

  .line__line
    display: block
    width: 1px
    background-color: $mid-grey
    position: relative
    left: calc((100% - 8px) / 2)

